# CI-CD-Automation

./: .env.exampl  README.md  app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 57fc439759ac_create_repositories_table.py
core/: settings.py
core/atlassian/: api.py  exceptions.py  manager.py  service.py
core/atlassian/api/: models.py  router.py
core/atlassian/auth/: auth.py  strategies.py
core/db/: base.py  models.py  repositories.py  unit_of_work.py
migration/: env.py
migration/versions/: 31a11872f9c3_create_repositories_table.py  41059b1140e6_initial.py
