[project]
name = "ci-cd-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei Dashkevich",email = "dashkevichworks@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.7"
dependencies = [
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
