[project]
name = "ci-cd-automation"
version = "0.1.13"
description = ""
authors = [
    {name = "Andrei Dashkevich",email = "dashkevichworks@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.7"
dependencies = [
    "fastapi (==0.118.1)",
    "uvicorn (==0.37.0)",
    "requests (==2.32.5)",
    "httpx (==0.28.1)",
    "gitpython (==3.1.45)",
    "sqlalchemy (==2.0.44)",
    "alembic (==1.17.0)",
    "psycopg2-binary (==2.9.11)",
    "pydantic-settings (==2.11.0)",
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
